Add MDUI statistics for mdx channels. This is currently based on the imported metadata, which may exclude entities which have been filtered out.  Needs to be reworked to operate on the raw aggregates.